--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,18 @@ click==8.1.3
 colorama==0.4.5
 Django==4.1.2
 django-crispy-forms==1.14.0
+flake8==6.0.0
+flake8-html==0.4.3
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.10.1
 Pillow==9.2.0
 platformdirs==2.5.2
+pycodestyle==2.10.0
+pyflakes==3.0.1
+Pygments==2.14.0
 sqlparse==0.4.3
 tomli==2.0.1
 tzdata==2022.5
